base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-ms-ingress
  namespace: test_base_ns
  annotations:
    argocd.argoproj.io/sync-wave: "5"
spec:
  ingressClassName: istio
  rules:
  - host: onboarding.dev.com
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: nest-ms-service
            port:
              number: 80
